--- a/style.css
+++ b/style.css
@@ -8,3 +8,113 @@ Version: 1.1
 Text Domain: readanddigest
 Template: readanddigest
 */
+
+/* .eltdf-logo-wrapper a {
+    height: 119px !important;
+    }
+    
+    h1.eltdf-pswt-title {
+    font-family: Playfair Display;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+    }
+    
+    .eltdf-post-info-category a {
+    font-family: Montserrat;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: 0.05em;
+    text-align: left;
+    color: #FCEE21 !important;
+    }
+    
+    .eltdf-post-info-date, .eltdf-blog-like {
+    color: #FCEE21 !important;
+    }
+    
+    h4.eltdf-pswt-title {
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0em;
+    text-align: left;
+    }
+    
+    .eltdf-pswt-holder .flex-direction-nav li {
+    background-color: #FCEE21 !important;
+    }
+    
+    .eltdf-pswt-holder .flex-direction-nav li:hover {
+    opacity: 0.5 !important;
+    }
+    
+    .eltdf-pswt-holder .flex-direction-nav a {
+    color: #222 !important;
+    }
+    
+    #home-reveals h6, .eltdf-pc-title {
+    font-family: Montserrat;
+    font-size: 16px !important;
+    font-style: normal;
+    font-weight: 600 !important;
+    line-height: 20px;
+    letter-spacing: 0.05em !important;
+    text-align: left;
+    color: #333333 !important;
+    }
+    
+    #home-reveals h3.eltdf-pt-one-title {
+    font-family: Playfair Display;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0em;
+    text-align: center;
+    }
+    
+    #home-reveals  .eltdf-pt-one-item.eltdf-item-hovered .eltdf-pt-one-title a {
+    color:  #FCEE21 !important;
+    }
+    
+    #home-reveals p.eltdf-post-excerpt {
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: center;
+    }
+    
+    #home-reveals .eltdf-pt-info-section {
+    font-family: Montserrat;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 12px;
+    letter-spacing: 0.05em;
+    text-align: left;
+    color: #333333 !important;
+    display: flex;
+    justify-content: center;
+    }
+    
+    #home-reveals .eltdf-post-info-date, #home-reveals .eltdf-post-info-comments-holder{
+    color: #333333 !important
+    }
+    #home-reveals .eltdf-post-item .eltdf-pt-info-section > div > div a:hover {
+    color:  #FCEE21 !important; 
+    }
+    
+    #home-reveals .eltdf-pt-info-section-left {
+    margin-right: 15px;
+    } */
+    
